[gd_scene load_steps=8 format=3 uid="uid://jw7uxdeaieow"]

[ext_resource type="Script" path="res://Scripts/Enemys/basic_enemy.gd" id="1_ery66"]
[ext_resource type="Texture2D" uid="uid://85jeob7yrg3k" path="res://Assets/Enemys/Enemy.png" id="1_gny2n"]
[ext_resource type="PackedScene" uid="uid://jnkl30satsbb" path="res://Scenes/Components/health_component.tscn" id="2_hh21o"]
[ext_resource type="PackedScene" uid="uid://5t48vqnhunai" path="res://Scenes/Components/vial_drop_component.tscn" id="3_w8b8d"]
[ext_resource type="PackedScene" uid="uid://d3gbnxq2mchbv" path="res://Scenes/Components/hurtbox_component.tscn" id="4_xtmwp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hl4u0"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u7ld6"]
radius = 5.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_ery66")
max_speed = 50

[node name="HealthComponent" parent="." instance=ExtResource("2_hh21o")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_w8b8d")]
health_component = NodePath("../HealthComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_xtmwp")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_hl4u0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_gny2n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_u7ld6")
